// Vitest Snapshot v1

exports[`defineComponent ref 1`] = `
"<template>
    <div ref='aa' :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" >5</div>
  </template>
  <script >
  import {defineComponent} from \\"vue\\"
  export default defineComponent({})
  </script>"
`;

exports[`multiple ref 1`] = `
"<template>
    <div ref='div1' :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\"  >
      <div ref=\\"div2\\" :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" >
          <Home ref=\\"home\\" :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" class=\\"test\\"></Home>
      </div>
    </div>
  </template>
  <script >
  import {defineComponent} from \\"vue\\"
  export default defineComponent({})
  </script>"
`;

exports[`multiple ref 2`] = `
"<script  setup lang=\\"ts\\">
    import { ref ,onMounted,getCurrentInstance} from \\"vue\\";
    import PPP from \\"./page/ppp.vue\\"
    import QQQ from \\"./page/qqq.vue\\"
    const {proxy} = getCurrentInstance();
    const ppp = ref(\\"\\");
    const qqq = ref(\\"\\");

    onMounted(()=>{
      console.log(proxy.onVnodeBeforeMountRef_);
      console.log(\\"ppp\\",ppp.value.a);
      console.log(\\"qqq->a1\\",ppp.value.a1);
      console.log(\\"qqq->a3\\",ppp.value.a3);
    })
    </script>

    <template>
      <div>
        <h1>🎇playground</h1>
        <PPP ref=\\"ppp\\" :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" ></PPP>
        <QQQ ref=\\"qqq\\" :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" ></QQQ>
      </div>
    </template>"
`;

exports[`setup ref 1`] = `
"<template>
     <div ref='xx' :onVnodeBeforeMount=\\"onVnodeBeforeMountRef_\\" >5</div>
    </template>
  <script setup>
  let a= 10;
  </script>"
`;
